# esloco

./: .gitignore  README.md  Revision.py  bases_on_target.py  case1.ini  case1_analysis.py  case2.ini  case2_analysis.py  case2_analysis_dd.py  config.ini  pyproject.toml  sim_config_roi.ini  stack_simulations.sh
InsertionSimulation/: InsertionGenomeBuilder.py  bases_on_target.py  bed_operations.py  case1_analysis.py  case2_analysis.py  combined_calculations.py  config_handler.py  counting.py  create_insertion_genome.py  fasta_operations.py  genome_generation.py  plot_functions.py  plotting.py  read_operations.py  simplot.py  utils.py
src/esloco/: bed_operations.py  combined_calculations.py  config_handler.py  counting.py  coverage.py  create_insertion_genome.py  esloco.py  fasta_operations.py  genome_generation.py  plot_esloco.py  plot_functions.py  read_operations.py  utils.py
src/esloco.egg-info/: PKG-INFO
