[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your_package_name"
version = "0.1.0"
description = "Your package description"
[project]
name = "your_package_name"
version = "0.1.0"
description = "Your package description"
dependencies = [
    "biopython",
    "numpy",
    "pandas",
    "joblib",
    "tqdm_joblib",
    "psutil",
    "matplotlib",
    "scipy",
    "plotly"
]
